--- a/primeiraliga.html
+++ b/primeiraliga.html
@@ -415,6 +415,69 @@
               </div>
 
               <div id="marcadores" class="tabcontentL">
+
+                <div class="row">
+                  <div class="col-md-1"></div>
+                  <div class="col-md-2">
+                    <img src="https://cdn.record.pt/images/2018-02/img_920x518$2018_02_16_18_18_08_1365743.jpg" width="100%">
+                    <h3 style="color:gray">Dyego Sousa</h3>
+                    <h5 style="color:gray">Golos Marcados: 14</h5>
+                  </div>
+                   <div class="col-md-2">
+                    <img src="https://cdn.record.pt/images/2017-09/img_920x518$2017_09_02_21_41_44_1308538.jpg" width="100%">
+                    <h3 style="color:gray">Seferovic</h3>
+                    <h5 style="color:gray">Golos Marcados: 13</h5>
+                  </div>
+                   <div class="col-md-2">
+                    <img src="https://pbs.twimg.com/media/DrLoh0NWsAANdyZ.jpg" width="100%">
+                    <h3 style="color:gray">Bas Dost</h3>
+                    <h5 style="color:gray">Golos Marcados: 12</h5>
+                  </div>
+                   <div class="col-md-2">
+                    <img src="https://cdn.record.pt/images/2018-04/img_920x518$2018_04_17_00_49_38_1387786.jpg" width="100%">
+                    <h3 style="color:gray">Bruno Fernandes</h3>
+                    <h5 style="color:gray">Golos Marcados: 10</h5>
+                  </div>
+                   <div class="col-md-2">
+                    <img src="https://cdn.record.pt/images/2018-07/img_920x518$2018_07_17_15_41_51_1424878.jpg" width="100%">
+                    <h3 style="color:gray">Tiquinho Soares</h3>
+                    <h5 style="color:gray">Golos Marcados: 10</h5>
+                  </div>
+                  <div class="col-md-1"></div>
+                </div>
+
+                <div class="row">
+                  <div class="col-md-1"></div>
+                  <div class="col-md-2">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcStMSUYmFPO5fjVM0pvMgclmD2Y7ducPAIkX-POWE7dhB2NqmJp" height="130px" width="100%">
+                    <h3 style="color:gray">B. Rochez</h3>
+                    <h5 style="color:gray">Golos Marcados: 9</h5>
+                  </div>
+                   <div class="col-md-2">
+                    <img src="https://3.bp.blogspot.com/-RMgtO1lNzzI/W28wIlxmjzI/AAAAAAAAUc0/upjqHOumS38ZN9XYjxL9jFFySZizOtiGwCLcBGAs/s1600/img_920x518%25242018_08_11_18_37_20_1434847.jpg" width="100%">
+                    <h3 style="color:gray">Jonas</h3>
+                    <h5 style="color:gray">Golos Marcados: 8</h5>
+                  </div>
+                   <div class="col-md-2">
+                    <img src="https://scontent-ort2-1.cdninstagram.com/vp/00e60de72d6f94c40441b4f545be52a6/5CED02B5/t51.2885-15/e35/50481149_302806657247912_3566742448766289729_n.jpg?_nc_ht=scontent-ort2-1.cdninstagram.com&ig_cache_key=MTk2ODQwMTEzOTI4NTk2MTgxNw%3D%3D.2" width="100%">
+                    <h3 style="color:gray">Pizzi</h3>
+                    <h5 style="color:gray">Golos Marcados: 8</h5>
+                  </div>
+                   <div class="col-md-2">
+                    <img src="https://cdn.record.pt/images/2018-03/img_920x518$2018_03_05_19_05_28_1372154.jpg" width="100%">
+                    <h3 style="color:gray">Tomané</h3>
+                    <h5 style="color:gray">Golos Marcados: 8</h5>
+                  </div>
+                   <div class="col-md-2">
+                    <img src="https://cdn.record.pt/images/2018-12/img_920x518$2018_12_19_22_02_20_1485712.jpg" width="100%">
+                    <h3 style="color:gray">Carlos</h3>
+                    <h5 style="color:gray">Golos Marcados: 8</h5>
+                  </div>
+                  <div class="col-md-1"></div>
+                </div>
+
+
+
              </div>
 
         </div>
