--- a/equipasnacional.html
+++ b/equipasnacional.html
@@ -110,101 +110,101 @@
                     <td><a href="plantel.html"> <img src="assets/img/fcp.png" width="50" height="50"/></a></td>
                     <td> <a href="plantel.html"> Futebol Clube Do Porto</a></td>
                     <td>Primeira</td>
-                    <td><a href="plantel.html"> Porto</a></td> 
+                    <td>Porto</td> 
                   </tr>
                   <tr>
-                    <td><img src="assets/img/benficalogo.png" width="50" height="50"/></td>
-                    <td>Sport Lisboa Benfica</td>
+                    <td><a href="plantel.html"><img src="assets/img/benficalogo.png" width="50" height="50"/></a></td>
+                    <td><a href="plantel.html">Sport Lisboa Benfica</a></td>
                     <td>Primeira</td>
                     <td>Lisboa</td> 
                   </tr>
                   <tr>
-                    <td><img src="assets/img/braga.png" width="50" height="50"/></td>
-                    <td>Sporting Clube de Braga</td>
+                    <td><a href="plantel.html"><img src="assets/img/braga.png" width="50" height="50"/></a></td>
+                    <td><a href="plantel.html">Sporting Clube de Braga</a></td>
                     <td>Primeira</td>
                     <td>Braga</td> 
                   </tr>
                   <tr>
                     <td><img src="assets/img/scp.png" width="45" height="45"/></td>
-                    <td>Sporting Clube De Portugal</td>
+                    <td><a href="plantel.html">Sporting Clube De Portugal</a></td>
                     <td>Primeira</td>
                     <td>Lisboa</td> 
                   </tr>
                   <tr>
                     <td><img src="assets/img/moreirense.png" width="50" height="50"/></td>
-                    <td>Moreirense Futebol Clube</td>
+                    <td><a href="plantel.html">Moreirense Futebol Clube</a></td>
                     <td>Primeira</td>
                     <td>Guimarães</td> 
                   </tr>
                   <tr>
                     <td><img src="assets/img/vsc.png" width="45" height="45"/></td>
-                    <td>Vitória Sport Clube</td>
+                    <td><a href="plantel.html">Vitória Sport Clube</a></td>
                     <td>Primeira</td>
                     <td>Guimarães</td> 
                   </tr>
                   <tr>
                     <td><img src="assets/img/belenenses.png" width="50" height="50"/></td>
-                    <td>Belenenses SAD</td>
+                    <td><a href="plantel.html">Belenenses SAD</a></td>
                     <td>Primeira</td>
                     <td>Lisboa</td> 
                   </tr>
                   <tr>
                     <td><img src="assets/img/rioave.png" width="45" height="45"/></td>
-                    <td>Rio Ave Futebol Clube</td>
+                    <td><a href="plantel.html">Rio Ave Futebol Clube</a></td>
                     <td>Primeira</td>
                     <td>Vila Do Conde</td> 
                   </tr>
                   <tr>
                     <td><img src="assets/img/portimonense.png" width="50" height="50"/></td>
-                    <td>Portimonense Sporting Clube</td>
+                    <td><a href="plantel.html">Portimonense Sporting Clube</a></td>
                     <td>Primeira</td>
                     <td>Portimão</td> 
                   </tr>
                   <tr>
                     <td><img src="assets/img/santa.png" width="50" height="50"/></td>
-                    <td>Clube Desportivo Santa Clara</td>
+                    <td><a href="plantel.html">Clube Desportivo Santa Clara</a></td>
                     <td>Primeira</td>
                     <td>São Miguel - Açores</td> 
                   </tr>
                   <tr>
                     <td><img src="assets/img/tondela.png" width="50" height="50"/></td>
-                    <td>Clube Desportivo De Tondela</td>
+                    <td><a href="plantel.html">Clube Desportivo De Tondela</a></td>
                     <td>Primeira</td>
                     <td>Viseu</td> 
                   </tr>
                   <tr>
                     <td><img src="assets/img/boavista.png" width="50" height="50"/></td>
-                    <td>Boavista Futebol Clube</td>
+                    <td><a href="plantel.html">Boavista Futebol Clube</a></td>
                     <td>Primeira</td>
                     <td>Ramalde - Porto</td> 
                   </tr>
                   <tr>
                     <td><img src="assets/img/aves.png" width="50" height="50"/></td>
-                    <td>Clube Desportivo Das Aves</td>
+                    <td><a href="plantel.html">Clube Desportivo Das Aves</a></td>
                     <td>Primeira</td>
                     <td>Vila Das Aves - Santo Tirso</td> 
                   </tr>
                   <tr>
                     <td><img src="assets/img/maritimo.png" width="50" height="50"/></td>
-                    <td>Club Sport Marítimo</td>
+                    <td><a href="plantel.html">Club Sport Marítimo</a></td>
                     <td>Primeira</td>
                     <td>Ilha Da Madeira</td> 
                   </tr>
                   <tr>
                     <td><img src="assets/img/nacional.png" width="50" height="50"/></td>
-                    <td>Clube Desportivo Nacional</td>
+                    <td><a href="plantel.html">Clube Desportivo Nacional</a></td>
                     <td>Primeira</td>
                     <td>Ilha Da Madeira</td> 
                   </tr>
                   <tr>
                     <td><img src="assets/img/chaves.png" width="50" height="50"/></td>
-                    <td>Grupo Desportivo de Chaves</td>
+                    <td><a href="plantel.html">Grupo Desportivo de Chaves</a></td>
                     <td>Primeira</td>
                     <td>Cidade De Chaves </td> 
                   </tr>
                   <tr>
                     <td><img src="assets/img/feirense.png" width="50" height="50"/></td>
-                    <td>Clube Desportivo Feirense</td>
+                    <td><a href="plantel.html">Clube Desportivo Feirense</a></td>
                     <td>Primeira</td>
                     <td>Santa Maria Da Feira</td> 
                   </tr>
