href to plantel

--- a/primeiraliga.html
+++ b/primeiraliga.html
@@ -119,8 +119,8 @@
                   </thead>
                 <tr>
                     <td> 01º </td>
-                    <td> Porto </td>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
+                    <td><a href="plantel.html"> Porto </a> </td>
+                    <td><a href="plantel.html"><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></a></td>
                     <td>22</td> 
                     <td>17</td>
                     <td>13</td>
@@ -131,8 +131,8 @@
                   </tr>
                   <tr>
                     <td> 02º </td>
-                    <td> Benfica </td>
-                    <td><img src="assets/img/benficalogo.png" width="50" height="50"/></td>
+                    <td><a href="plantel.html"> Benfica </a></td>
+                    <td><a href="plantel.html"><img src="assets/img/benficalogo.png" width="50" height="50"/></a></td>
                     <td>21</td> 
                     <td>16</td>
                     <td>2</td>
@@ -143,8 +143,8 @@
                   </tr>
                   <tr>
                     <td> 03º </td>
-                    <td> Braga </td>
-                    <td><img src="assets/img/braga.png" width="50" height="50"/></td>
+                    <td><a href="plantel.html"> Braga </a></td>
+                    <td><a href="plantel.html"><img src="assets/img/braga.png" width="50" height="50"/></a></td>
                     <td>22</td> 
                     <td>15</td>
                     <td>4</td>
@@ -155,8 +155,8 @@
                   </tr>
                   <tr>
                     <td> 04º </td>
-                    <td> Sporting </td>
-                    <td><img src="assets/img/scp.png" width="45" height="45"/></td>
+                    <td><a href="plantel.html"> Sporting </a></td>
+                    <td><a href="plantel.html"><img src="assets/img/scp.png" width="45" height="45"/></a></td>
                     <td>22</td> 
                     <td>14</td>
                     <td>3</td>
@@ -167,8 +167,8 @@
                   </tr>
                   <tr>
                     <td> 05º </td>
-                    <td> Moreirense </td>
-                    <td><img src="assets/img/moreirense.png" width="50" height="50"/></td>
+                    <td><a href="plantel.html"> Moreirense </a></td>
+                    <td><a href="plantel.html"><img src="assets/img/moreirense.png" width="50" height="50"/></a></td>
                     <td>22</td> 
                     <td>12</td>
                     <td>2</td>
@@ -179,8 +179,8 @@
                   </tr>
                   <tr>
                     <td> 06º </td>
-                    <td> Vitória SC </td>
-                    <td><img src="assets/img/vsc.png" width="45" height="45"/></td>
+                    <td><a href="plantel.html"> Vitória SC </a></td>
+                    <td><a href="plantel.html"><img src="assets/img/vsc.png" width="45" height="45"/></a></td>
                     <td>22</td> 
                     <td>10</td>
                     <td>5</td>
@@ -191,8 +191,8 @@
                   </tr>
                   <tr>
                     <td> 07º </td>
-                    <td> Belenenses </td>
-                    <td><img src="assets/img/belenenses.png" width="50" height="50"/></td>
+                    <td><a href="plantel.html"> Belenenses </a></td>
+                    <td><a href="plantel.html"><img src="assets/img/belenenses.png" width="50" height="50"/></a></td>
                     <td>22</td> 
                     <td>7</td>
                     <td>9</td>
@@ -203,8 +203,8 @@
                   </tr>
                   <tr>
                     <td> 08º </td>
-                    <td> Rio Ave </td>
-                    <td><img src="assets/img/rioave.png" width="45" height="45"/></td>
+                    <td><a href="plantel.html"> Rio Ave </a></td>
+                    <td><a href="plantel.html"><img src="assets/img/rioave.png" width="45" height="45"/></a></td>
                     <td>22</td> 
                     <td>7</td>
                     <td>7</td>
@@ -215,8 +215,8 @@
                   </tr>
                   <tr>
                     <td> 09º </td>
-                    <td> Santa Clara </td>
-                    <td><img src="assets/img/santa.png" width="50" height="50"/></td>
+                    <td><a href="plantel.html"> Santa Clara </a></td>
+                    <td><a href="plantel.html"><img src="assets/img/santa.png" width="50" height="50"/></a></td>
                     <td>22</td> 
                     <td>8</td>
                     <td>3</td>
@@ -227,8 +227,8 @@
                   </tr>
                   <tr>
                     <td> 10º </td>
-                    <td> Portimonense </td>
-                    <td><img src="assets/img/portimonense.png" width="50" height="50"/></td>
+                    <td><a href="plantel.html"> Portimonense </a></td>
+                    <td><a href="plantel.html"><img src="assets/img/portimonense.png" width="50" height="50"/></a></td>
                     <td>22</td> 
                     <td>8</td>
                     <td>3</td>
@@ -239,8 +239,8 @@
                   </tr>
                   <tr>
                     <td> 11º </td>
-                    <td> Tondela </td>
-                    <td><img src="assets/img/tondela.png" width="50" height="50"/></td>
+                    <td><a href="plantel.html"> Tondela </a></td>
+                    <td><a href="plantel.html"><img src="assets/img/tondela.png" width="50" height="50"/></a></td>
                     <td>22</td> 
                     <td>6</td>
                     <td>5</td>
@@ -251,8 +251,8 @@
                   </tr>
                   <tr>
                     <td> 12º </td>
-                    <td> Boa Vista </td>
-                    <td><img src="assets/img/boavista.png" width="50" height="50"/></td>
+                    <td><a href="plantel.html"> Boa Vista </a></td>
+                    <td><a href="plantel.html"><img src="assets/img/boavista.png" width="50" height="50"/></a></td>
                     <td>22</td> 
                     <td>6</td>
                     <td>5</td>
@@ -263,8 +263,8 @@
                   </tr>
                   <tr>
                     <td> 13º </td>
-                    <td> Marítimo </td>
-                    <td><img src="assets/img/maritimo.png" width="50" height="50"/></td>
+                    <td><a href="plantel.html"> Marítimo </a></td>
+                    <td><a href="plantel.html"><img src="assets/img/maritimo.png" width="50" height="50"/></a></td>
                     <td>22</td> 
                     <td>7</td>
                     <td>2</td>
@@ -275,8 +275,8 @@
                   </tr>
                   <tr>
                     <td> 14º </td>
-                    <td> Nacional </td>
-                    <td><img src="assets/img/nacional.png" width="50" height="50"/></td>
+                    <td><a href="plantel.html"> Nacional </a></td>
+                    <td><a href="plantel.html"><img src="assets/img/nacional.png" width="50" height="50"/></a></td>
                     <td>22</td> 
                     <td>6</td>
                     <td>5</td>
@@ -287,8 +287,8 @@
                   </tr>
                   <tr>
                     <td> 15º </td>
-                    <td> Vitoria De Setúbal </td>
-                    <td><img src="assets/img/vitoria.png" width="50" height="50"/></td>
+                    <td><a href="plantel.html"> Vitoria De Setúbal </a></td>
+                    <td><a href="plantel.html"><img src="assets/img/vitoria.png" width="50" height="50"/></a></td>
                     <td>22</td> 
                     <td>5</td>
                     <td>7</td>
@@ -299,8 +299,8 @@
                   </tr>
                   <tr>
                     <td> 16º </td>
-                    <td> Aves </td>
-                    <td><img src="assets/img/aves.png" width="50" height="50"/></td>
+                    <td><a href="plantel.html"> Aves </a></td>
+                    <td><a href="plantel.html"><img src="assets/img/aves.png" width="50" height="50"/></a></td>
                     <td>21</td> 
                     <td>6</td>
                     <td>3</td>
@@ -311,8 +311,8 @@
                   </tr>
                   <tr>
                     <td> 17º </td>
-                    <td> Chaves </td>
-                    <td><img src="assets/img/chaves.png" width="50" height="50"/> </td>
+                    <td><a href="plantel.html"> Chaves </a></td>
+                    <td><a href="plantel.html"><img src="assets/img/chaves.png" width="50" height="50"/></a></td>
                     <td>22</td> 
                     <td>5</td>
                     <td>4</td>
@@ -324,8 +324,8 @@
 
                 <tr>
                     <td> 18º </td>
-                    <td> Feirense </td>
-                    <td><img src="assets/img/feirense.png" width="50" height="50"/></td>
+                    <td><a href="plantel.html"> Feirense </a></td>
+                    <td><a href="plantel.html"><img src="assets/img/feirense.png" width="50" height="50"/></a></td>
                     <td>22</td> 
                     <td>2</td>
                     <td>8</td>
