--- a/equipasinternacional.html
+++ b/equipasinternacional.html
@@ -100,219 +100,219 @@
                 <tbody>
                   <tr>
                     
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
+                    <td><img src="assets/img/real.png" width="55" height="55"/></td>
                     <td>Real Madrid</td>
                     <td>Champions</td>
                     <td>Espanha</td> 
                   </tr>
                    <tr>
-                     <td><img src="https://upload.wikimedia.org/wikipedia/pt/f/f0/500px-SL_Benfica_logo_svg.png" width="50" height="50"/> </td>
+                     <td><img src="assets/img/barca.png" width="50" height="50"/></td>
                      <td>Barcelona</td>
                      <td>Champions</td>
                      <td>Espanha</td>
                  </tr>
                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
+                     <td><img src="assets/img/bayern.png" width="50" height="50"/></td>
                     <td>Bayern de Múnich</td>
                     <td>Champions</td>
                     <td>Alemanha</td>
                   </tr>
                   <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
+                     <td><img src="assets/img/dortmund.png" width="50" height="50"/></td>
                     <td>Borussia Dortmund</td>
                     <td>Champions</td>
                     <td>Alemanha</td>
                   </tr>
                   <tr>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
+                    <td><img src="assets/img/city.png" width="50" height="50"/></td>
                     <td>Manchester City</td>
                     <td>Champions</td>
                     <td>Inglaterra</td> 
                   </tr>
                    <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
+                     <td><img src="assets/img/atletico.png" width="45" height="45"/></td>
                      <td>Atletico de Madrid</td>
                      <td>Champions</td>
                      <td>Espanha</td>
                  </tr>
                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Juventus</td>
+                    <td><img src="assets/img/brugge.png" width="50" height="50"/></td>
+                    <td>Club Brugge</td>
+                    <td>Champions</td>
+                    <td>Italia</td>
+                  </tr>
+
+                  <tr>
+                     <td><img src="assets/img/monaco.png" width="50" height="50"/></td>
+                    <td>Monaco</td>
+                    <td>Champions</td>
+                    <td>Italia</td>
+                  </tr>
+
+                  <tr>
+                     <td><img src="assets/img/tottenham.png" width="50" height="50"/></td>
+                    <td>Tottenham</td>
+                    <td>Champions</td>
+                    <td>Italia</td>
+                  </tr>
+
+                  <tr>
+                     <td><img src="assets/img/inter.png" width="50" height="50"/></td>
+                    <td>Inter Milan</td>
+                    <td>Champions</td>
+                    <td>Italia</td>
+                  </tr>
+
+                  <tr>
+                     <td><img src="assets/img/psv.png" width="50" height="50"/></td>
+                    <td>PSV</td>
+                    <td>Champions</td>
+                    <td>Italia</td>
+                  </tr>
+
+                  <tr>
+                     <td><img src="assets/img/psg.png" width="50" height="50"/></td>
+                    <td>PSG</td>
+                    <td>Champions</td>
+                    <td>Italia</td>
+                  </tr>
+
+                  <tr>
+                     <td><img src="assets/img/liverpool.png" width="50" height="50"/></td>
+                    <td>Liverpool</td>
+                    <td>Champions</td>
+                    <td>Italia</td>
+                  </tr>
+
+                  <tr>
+                     <td><img src="assets/img/napoli.png" width="50" height="50"/></td>
+                    <td>Napoli</td>
+                    <td>Champions</td>
+                    <td>Italia</td>
+                  </tr>
+
+                  <tr>
+                     <td><img src="assets/img/estrela.png" width="50" height="50"/></td>
+                    <td>Estrela Vermelha</td>
                     <td>Champions</td>
                     <td>Italia</td>
                   </tr>
 
                   <tr>
                      <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
+                    <td>Porto</td>
+                    <td>Champions</td>
+                    <td>Italia</td>
+                  </tr>
+
+                  <tr>
+                     <td><img src="assets/img/schalke.png" width="50" height="50"/></td>
+                    <td>Schalke</td>
+                    <td>Champions</td>
+                    <td>Italia</td>
+                  </tr>
+
+                  <tr>
+                     <td><img src="assets/img/galatasaray.png" width="50" height="50"/></td>
+                    <td>Galatasaray</td>
+                    <td>Champions</td>
+                    <td>Italia</td>
+                  </tr>
+
+                  <tr>
+                     <td><img src="assets/img/moscovo.png" width="50" height="50"/></td>
+                    <td>Moscovo</td>
+                    <td>Champions</td>
+                    <td>Italia</td>
+                  </tr>
+
+                  <tr>
+                     <td><img src="assets/img/ajax.png" width="50" height="50"/></td>
+                    <td>Ajax</td>
+                    <td>Champions</td>
+                    <td>Italia</td>
+                  </tr>
+
+                  <tr>
+                     <td><img src="assets/img/benficalogo.png" width="50" height="50"/></td>
+                    <td>Benfica</td>
+                    <td>Champions</td>
+                    <td>Italia</td>
+                  </tr>
+
+                  <tr>
+                     <td><img src="assets/img/atenas.png" width="50" height="50"/></td>
+                    <td>AEK Atenas</td>
+                    <td>Champions</td>
+                    <td>Italia</td>
+                  </tr>
+
+                  <tr>
+                     <td><img src="assets/img/lyon.png" width="50" height="50"/></td>
+                    <td>Lyon</td>
+                    <td>Champions</td>
+                    <td>Italia</td>
+                  </tr>
+
+                  <tr>
+                     <td><img src="assets/img/schaktar.png" width="50" height="50"/></td>
+                    <td>Shakhtar Donetsk</td>
+                    <td>Champions</td>
+                    <td>Italia</td>
+                  </tr>
+
+                  <tr>
+                     <td><img src="assets/img/hoffen.png" width="50" height="50"/></td>
+                    <td>Hoffenheim</td>
+                    <td>Champions</td>
+                    <td>Italia</td>
+                  </tr>
+
+                  <tr>
+                     <td><img src="assets/img/roma.png" width="50" height="50"/></td>
+                    <td>Roma</td>
+                    <td>Champions</td>
+                    <td>Italia</td>
+                  </tr>
+
+                  <tr>
+                     <td><img src="assets/img/plzen.png" width="50" height="50"/></td>
+                    <td>Plzen</td>
+                    <td>Champions</td>
+                    <td>Italia</td>
+                  </tr>
+
+                  <tr>
+                     <td><img src="assets/img/cska.png" width="50" height="50"/></td>
+                    <td>CSKA</td>
+                    <td>Champions</td>
+                    <td>Italia</td>
+                  </tr>
+
+                  <tr>
+                     <td><img src="assets/img/united.png" width="50" height="50"/></td>
+                    <td>Manchester United</td>
+                    <td>Champions</td>
+                    <td>Italia</td>
+                  </tr>
+
+                  <tr>
+                     <td><img src="assets/img/juventos.png" width="40" height="50"/></td>
                     <td>Juventus</td>
                     <td>Champions</td>
                     <td>Italia</td>
                   </tr>
 
                   <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Juventus</td>
+                     <td><img src="assets/img/valencia.png" width="40" height="50"/></td>
+                    <td>Valencia</td>
                     <td>Champions</td>
                     <td>Italia</td>
                   </tr>
 
                   <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Juventus</td>
-                    <td>Champions</td>
-                    <td>Italia</td>
-                  </tr>
-
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Juventus</td>
-                    <td>Champions</td>
-                    <td>Italia</td>
-                  </tr>
-
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Juventus</td>
-                    <td>Champions</td>
-                    <td>Italia</td>
-                  </tr>
-
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Juventus</td>
-                    <td>Champions</td>
-                    <td>Italia</td>
-                  </tr>
-
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Juventus</td>
-                    <td>Champions</td>
-                    <td>Italia</td>
-                  </tr>
-
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Juventus</td>
-                    <td>Champions</td>
-                    <td>Italia</td>
-                  </tr>
-
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Juventus</td>
-                    <td>Champions</td>
-                    <td>Italia</td>
-                  </tr>
-
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Juventus</td>
-                    <td>Champions</td>
-                    <td>Italia</td>
-                  </tr>
-
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Juventus</td>
-                    <td>Champions</td>
-                    <td>Italia</td>
-                  </tr>
-
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Juventus</td>
-                    <td>Champions</td>
-                    <td>Italia</td>
-                  </tr>
-
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Juventus</td>
-                    <td>Champions</td>
-                    <td>Italia</td>
-                  </tr>
-
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Juventus</td>
-                    <td>Champions</td>
-                    <td>Italia</td>
-                  </tr>
-
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Juventus</td>
-                    <td>Champions</td>
-                    <td>Italia</td>
-                  </tr>
-
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Juventus</td>
-                    <td>Champions</td>
-                    <td>Italia</td>
-                  </tr>
-
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Juventus</td>
-                    <td>Champions</td>
-                    <td>Italia</td>
-                  </tr>
-
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Juventus</td>
-                    <td>Champions</td>
-                    <td>Italia</td>
-                  </tr>
-
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Juventus</td>
-                    <td>Champions</td>
-                    <td>Italia</td>
-                  </tr>
-
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Juventus</td>
-                    <td>Champions</td>
-                    <td>Italia</td>
-                  </tr>
-
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Juventus</td>
-                    <td>Champions</td>
-                    <td>Italia</td>
-                  </tr>
-
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Juventus</td>
-                    <td>Champions</td>
-                    <td>Italia</td>
-                  </tr>
-
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Juventus</td>
-                    <td>Champions</td>
-                    <td>Italia</td>
-                  </tr>
-
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Juventus</td>
-                    <td>Champions</td>
-                    <td>Italia</td>
-                  </tr>
-
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
-                    <td>Juventus</td>
+                     <td><img src="assets/img/boys.png" width="40" height="50"/></td>
+                    <td>Young Boys</td>
                     <td>Champions</td>
                     <td>Italia</td>
                   </tr>
